--- a/index.html
+++ b/index.html
@@ -9,7 +9,29 @@
 </head>
 
 <body>
-  <h1>Intégrer une maquette simple ok ?</h1>
+  <!-- nav -->
+  <div>
+    <nav>
+      <h2>Helium</h2>
+      <ul>
+        <!-- <li>helium</li> -->
+        <li>5g</li>
+        <li>explorateur</li>
+        <li>ecosystem</li>
+      </ul>
+    </nav>
+  </div>
+  <!-- header -->
+  <div>
+    <header>
+      <div class="header-left">
+        <div class="header-left-container">
+
+        </div>
+      </div>
+    </header>
+  </div>
+
 
 </body>
 
