--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
     <header>
       <div class="header-left">
         <div class="header-left-container">
-
+          <h1>People-Powered Networks</h1>
+          <h3>Start a Wireless Revolution</h3>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint incidunt vero laborum doloribus odit saepe
+            ipsum a dignissimos impedit dolorem?</p>
+        </div>
+      </div>
+      <div class="header-right">
+        <div class="header-right-container">
+          <img src="./img/main.png" alt="imgDroite" height="300">
         </div>
       </div>
     </header>
