--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <!-- nav -->
+  <!-- <div class="fond1"></div> -->
   <div>
     <nav>
       <h2>Helium</h2>
@@ -33,11 +34,32 @@
         </div>
       </div>
       <div class="header-right">
-        <div class="header-right-container">
-          <img src="./img/main.png" alt="imgDroite" height="300">
-        </div>
+        <img src="./img/main.png" alt="imgDroite" id="modem" height="300">
       </div>
     </header>
+    <section class"info">
+      <div class="info-left">
+        <h3>Core Technologies</h3>
+        <div class="btn-container">
+          <button>Tokens</button>
+          <button>Proof of coverage</button>
+          <button>LongFi</button>
+        </div>
+
+      </div>
+      <div class="infor-right">
+        <h3>Our Ivestors</h3>
+        <div class="investors">
+          <div class="img-container">
+            <img src="./img/investlogo2blue.png" alt="investor-1">
+            <img src="./img/investlogo3blue.png" alt="investor-2">
+            <img src="./img/investlogo4blue.png" alt="investor-3">
+          </div>
+        </div>
+      </div>
+
+    </section>
+  </div>
   </div>
 
 
